<resources>
    <string name="app_name">eCamH265</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Account:</string>
      <string name="service_ip">Service_IP:</string>
       <string name="service_port">Port:</string>
    <string name="password">Password:</string>
    <string name="remember_password">Remember password</string>
    <string name="message">Please link network first</string>
    <string name="ok">OK</string>
    <string name="save_and_back">Save And Back</string>
    <string name="login_setting_default_IP">111.160.26.162</string>
    <string name="login_setting_default_port">8850</string>
    <string name="login_setting_introduction">Note: If empty, will use the default IP and PORT</string>
    <string name="verification">Account and password cannot be empty</string>
    <string name="password_error">Password error</string>
    <string name="account_error">Account does not exist</string>
    <string name="online">online</string>
    <string name="not_online">offline</string>
    <string name="auto_login">Automatic login</string>
    <string name="login">Login</string>
    <string name="login_fail">Login fail</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">loading</string>
    <string name="not_online_message">Device offline,can not open</string>
    <string name="save_set">Saving settings</string>
    <string name="camera_list">Camera List</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="account">My account</string>
    <string name="sys_message">System message</string>
    <string name="alarm">Alarm</string>
    <string name="about">About eCamera V1.1.9</string>
    <string name="exit">Log Out</string>
    <string name="email">Email</string>
    <string name="mobiletel">Mobile phone number</string>
    <string name="account_name">Account</string>
    <string name="password_change">Modify password</string>
    <string name="phone_change">Modify cell phone number</string>
    <string name="name">UserName</string>
    <string name="cancel">Cancel</string>
    <string name="device_manager_title">Select Camera</string>
    <string name="device_name">Device name</string>
    <string name="device_id">device id</string>
    <string name="vedio_arg">Video image parameters</string>
    <string name="resolution">Resolution</string>
    <string name="picture">Image quality</string>
    <string name="alarm_messages">Motion Detect settings</string>
    <string name="move_detect">Video motion detection</string>
    <string name="push_set">Alarm Notify Setting</string>
    <string name="push_push">Alarm Notify</string>
	<string name="video_list">Video List</string>
	<string name="update">Update</string>
	<string name="save_picture">saved to /eCamera</string>
	<string name="link_timeout">Connection timeout, please reconnect the video</string>
	<string name="link_error">Connection error, please reconnect the video</string>
	<string name="login_error">Connection error,please log in again</string>
	<string name="video_over_turn">Rollover</string>
	<string name="turn_over">Rollover Image</string>
	<string name="load_setting">Settings information is being read</string>
	<string name="load_videolist">Playback list is being read</string>
	<string name="pull_to_refresh">pull to refresh</string>
	<string name="release_to_refresh">Release to refresh</string>
	<string name="refreshing">Refreshing</string>
	<string name="last_update">Last update</string>
	<string name="select_date">Select Date</string>
	<string name="load_data">Now loading</string>
	<string name="camera_version_title">Camera update</string>
	<string name="camera_new_version">Find new version</string>
	<string name="camera_old_version1">Version</string>
	<string name="camera_old_version2"> no new version</string>
	<string name="client_new_version">Find new client version</string>
	<string name="camera_update">Update</string>
	<string name="camera_update_notice">Make sure camera is online ,make sure camera power supply and connected to the network</string>
	<string name="auxiliary_set">Auxiliary Settings</string>
	<string name="power_land">Power Light</string>
	<string name="vmd_info">If something moving in the video,it will trigger the alarm,send alarm push and record it(if has SDcard)</string>
	<string name="gain_set">Getting Settings</string>
	<string name="update_dialog_title">Client Update</string>
	<string name="update_dialog_message">New version, please update in time</string>
	<string name="download_dialog_message">Downloading</string>
	<string name="download_dialog_fail">Download fail</string>
	<string name="load_more">More</string>
	<string name="no_sdcard">Please insert the SD card</string>
	<string name="local_files">LocalFiles</string>
	<string name="no_estore">No SDCard in Camera</string>
	<string name="share_pic">Share picture</string>
	<string name="set_fail">Bad Network Signal, set fail</string>
	<string name="get_settings_fail">Get settings fail</string>
	<string name="modify_phone_num_hint">Bind new phone number</string>
	<string name="original_password">Original Password</string>
	<string name="new_password">New Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="modify_password_tips"></string>
	<string name="wifi_intensity">Device Wifi Intensity</string>
	<string name="set_new_password">Setting new password now</string>
	<string name="set_new_phone_num">Setting new cell phone number now</string>
	<string name="more">More</string>
	<string name="media_lib">Media</string>
	<string name="notice">Notice</string>
	<string name="share">Share</string>
	<string name="share_device_succeess">Succeess</string>
	<string name="share_device_fail_already_succeed">Fail,this account has been shared before</string>
	<string name="share_device_fail_account_not_exist">Fail,account not exist</string>
	<string name="share_device_fail">fail</string>
	<string name="add_sharer_account_et_hint_text">Input the account you want to share</string>
	<string name="camera_list_sharer_tip">-share</string>
	<string name="device_set_share_device">Share device</string>
	<string name="device_set_remove_device">Remove device</string>
	<string name="device_set_sharer_no_property">No operation permissions</string>
	<string name="turn_over_0">Image flip - 0°</string>
	<string name="turn_over_180">Image flip - 180°</string>
	<string name="power_land_on">Power light - on</string>
	<string name="power_land_off">Power light - off</string>
	<string name="device_share_to_other_add_sharer_account">Add account</string>
	<string name="device_share_to_other_tips">Added account</string>
	<string name="flash_lighting_tips">Please aim mobile phone flash to the camera</string>
	<string name="flash_lighting_btn_tips">Flash</string>
	<string name="camera_list_wifi_intensity">Signal:</string>
	<string name="set_device_wifi_device_name">Camera name:</string>
	<string name="login_or_register_activity_slogan">I feel safe with you</string>
	<string name="login_or_register_activity_register">Register</string>
	<string name="login_or_register_activity_login">Log In</string>
	<string name="login_or_register_activity_try">Try eCam</string>
	<string name="big_image_activity_dialog_title_remove">Delete</string>
	<string name="big_image_activity_dialog_message">Delete this image?</string>
	<string name="big_image_activity_dialog_yes_button_name">Yes</string>
	<string name="big_image_activity_dialog_no_button_name">No</string>
	<string name="modify_password_activity_fail_toast">Entered passwords differ,please input again</string>
	<string name="modify_password_activity_success_toast">Success</string>
	<string name="modify_password_activity_passwordformat_fail">Password error ,please input again</string>
	<string name="modify_password_activity_authencation_fail">Password error ,please input again</string>
	<string name="modify_cellphonenum_activity_fail_toast">Set fail</string>
	<string name="modify_cellphonenum_activity_success_toast">Sussess</string>
	<string name="change_devicename_activity_add_success_tip">Success! A name for camera</string>
	<string name="change_devicename_activity_success">Succeess</string>
	<string name="change_devicename_activity_fail">Fail</string>
	<string name="remove_device_popmenu_yes">Yes</string>
	<string name="remove_device_popmenu_no">No</string>
	<string name="remove_device_popmenu_logout">Yes</string>
	<string name="device_sharer_item_remove">Delete</string>
	<string name="loacl_file_activity_no_iamge_bg">No File</string>
	<string name="register_activity_username">Username: 6 to 32 characters</string>
	<string name="register_activity_email">Email</string>
	<string name="register_activity_password">Password: 6 to 20 characters,letters or numbers,case sensitive</string>
	<string name="register_activity_password_confirm">Confirm Password</string>
	<string name="register_activity_show_password">Show Password</string>
	<string name="register_activity_tips">Click to register,you agree to our Terms of registration</string>
	<string name="register_activity_success">Register Success</string>
	<string name="register_activity_fail_account_exist">Register Fail, Account Exist</string>
	<string name="register_activity_fail_email_exist">Register Fail, Email Exist</string>
	<string name="register_activity_fail">Register Fail</string>
	<string name="register_activity_account_password_empty">Account and password cannot be empty</string>
	<string name="register_activity_password_differ">Entered passwords differ</string>
	<string name="register_activity_fail_account_format">Fail, Account contans illegal character</string>
	<string name="flash_activity_turn_red_btn_name">Click when the light turn red </string>
	<string name="flash_activity_turn_red_tip">Has the power light turned red?</string>
	<string name="send_wifi_config_activity_tip">Put the speaker close to the camera microphone</string>
	<string name="send_wifi_config_activity_dialog_title">Network unstable</string>
	<string name="send_wifi_config_activity_dialog_message">Please try again later</string>
	<string name="send_wifi_config_activity_dialog_yes_btn">Sure</string>
	<string name="send_wifi_config_activity_tip_sending">Sending command&#8230;</string>
	<string name="send_wifi_config_activity_tip_finish">Finish</string>
	<string name="send_wifi_config_activity_btn_send">Send</string>
	<string name="send_wifi_config_activity_btn_send_finish">Click when the light turn green</string>
	<string name="send_wifi_config_activity_final_tips">Success if power light turn green! Or try again</string>
	<string name="set_wifi_activity_device_name">Camera Name:</string>
	<string name="set_wifi_activity_input_device_name">Input Camera Name</string>
	<string name="set_wifi_activity_wifi_name">Wifi SSID:</string>
	<string name="set_wifi_activity_wifi_password">Wifi Password:</string>
	<string name="set_wifi_activity_input_wifi_password">Input Wifi Password</string>
	<string name="match_activity_tips">Camera is reading configuration,please wait&#8230;</string>
	<string name="match_activity_fail_tips">Fail</string>
	<string name="match_activity_fail_dialog_title">Fail</string>
	<string name="match_activity_fail_dialog_message">Network unstable,please try again</string>
	<string name="match_activity_fail_dialog_yes_btn">Sure</string>
	<string name="match_activity_success_dialog_title">Success</string>
	<string name="match_activity_success_dialog_message">Camera added successfully</string>
	<string name="match_activity_success_dialog_yes_btn">Sure</string>
	<string name="navigation_activity_btn">Go</string>
	<string name="title_popup_listen">Listen</string>
	<string name="title_popup_scan">Scan</string>
	<string name="popup_window_hd">HD</string>
	<string name="popup_window_sd">SD</string>
	<string name="save_db">bind user infomation with finger</string>
</resources>