<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_blue" >

        <ImageButton
            android:id="@+id/ib_login_settting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:background="#00000000"
            android:src="@drawable/back_btn_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bg_normal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/service_ip"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/login_settting_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_setting_default_IP"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/list_item_bg_normal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dip"
                android:text="@string/service_port"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/login_settting_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_setting_default_port"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login_setting_introduction" />
        </RelativeLayout>
<!-- drawable/new_login_btn_selector -->
        <Button
            android:id="@+id/login_sttting_bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dip"
            android:background="@drawable/new_login_btn_selector"
            android:gravity="center"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:text="@string/save_and_back"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>