<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >
    <FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="55dip"
	    android:background="@color/title_blue" >
        <ImageButton
            android:id="@+id/ib_modify_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/back_btn_selector"
            android:layout_gravity="left|center" />
        <!--  <Button
            android:id="@+id/ib_modify_password_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/ok"
            android:background="@drawable/common_button_white"
            android:layout_marginRight="10dip"/>-->
        <ImageButton
            android:id="@+id/ib_modify_password_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="10dip"
            android:background="@drawable/next_btn_selector" />
    </FrameLayout>
    
    <EditText
        android:id="@+id/et_original_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:hint="@string/original_password"
        android:background="@drawable/list_item_bg_normal"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:background="@drawable/list_item_bg_normal"
        android:ems="10" >

    </EditText>
    
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:background="@drawable/list_item_bg_normal"
        android:ems="10" >

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:paddingLeft="10dip"
        android:textSize="15dip"
        android:textColor="@color/gray"
        android:text="@string/modify_password_tips" />

</LinearLayout>
