<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="55dip"
	    android:background="@color/title_blue" >
        <ImageButton
            android:id="@+id/ib_information_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/back_btn_selector"
            android:layout_gravity="left|center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="20dip"
        android:background="@drawable/list_item_bg_normal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/account_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="100dip"
            android:textColor="#FF000000"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_change_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_bg_middle" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:src="@mipmap/qz_icon_forward_normal" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_change_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_bg_middle" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/phone_change"
            android:textSize="20sp" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:src="@mipmap/qz_icon_forward_normal" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_bg_middle" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/password_change"
            android:textSize="20sp" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:src="@mipmap/qz_icon_forward_normal" />

    </FrameLayout>

       
    <Button
        android:id="@+id/btn_save_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="50dip"
        android:paddingTop="15dip"
        android:paddingBottom="15dip"
        android:background="@drawable/logout_btn_selector"
        android:text="@string/save_db"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" 
        android:visibility="gone"
        />
    
    
    
</LinearLayout>